[feat] (ddns | git-commit) 生成ddns-aliyun和auto-git-manager 模块对应脚本以及使用方法

--- a/network_monitor/network-monitor.service
+++ b/network_monitor/network-monitor.service
@@ -3,7 +3,7 @@ Description=Network Monitor Service
 After=network.target
 
 [Service]
-ExecStart=/home/ts/vscode/sh-tools/sh/monitor_network.sh
+ExecStart=~/network_monitor/monitor_network.sh
 Restart=always
 User=root
 
